// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one and one tablet slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="IS1 S1"
>
  <div
    className="S1"
  >
    <TileU
      tileName="lead"
    />
    <TileC
      tileName="support"
    />
  </div>
</div>
`;

exports[`2. lead one full width tablet slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="IS1 S1"
>
  <TileR
    tileName="lead"
  />
</div>
`;

exports[`3. lead two no pic and two tablet slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS2 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS4 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="IS4 S1"
>
  <div
    className="S1"
  >
    <TileX
      tileName="lead1"
    />
    <div
      className="IS1 S1"
    />
    <TileY
      tileName="lead2"
    />
    <div
      className="IS2 S1"
    />
    <TileD
      tileName="support1"
    />
    <div
      className="IS3 S1"
    />
    <TileZ
      tileName="support2"
    />
  </div>
</div>
`;

exports[`4. secondary four tablet slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  width: 50%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  width: 50%;
}

.IS7 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS8 {
  width: 50%;
}

.IS9 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS10 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="IS10 S1"
>
  <div
    className="IS4 S1"
  >
    <div
      className="IS1 S1"
    >
      <TileC
        tileName="secondary1"
      />
    </div>
    <div
      className="IS2"
    />
    <div
      className="IS3 S1"
    >
      <TileC
        tileName="secondary2"
      />
    </div>
  </div>
  <div
    className="IS5 S1"
  />
  <div
    className="IS9 S1"
  >
    <div
      className="IS6 S1"
    >
      <TileC
        tileName="secondary3"
      />
    </div>
    <div
      className="IS7"
    />
    <div
      className="IS8 S1"
    >
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`5. secondary two and two slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  width: 50%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS7 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="IS7 S1"
>
  <div
    className="IS4 S1"
  >
    <div
      className="IS1 S1"
    >
      <TileV
        tileName="secondary1"
      />
    </div>
    <div
      className="IS2"
    />
    <div
      className="IS3 S1"
    >
      <TileV
        tileName="secondary2"
      />
    </div>
  </div>
  <div
    className="IS5 S1"
  />
  <div
    className="S1"
  >
    <TileG
      tileName="support1"
    />
  </div>
  <div
    className="IS6 S1"
  />
  <div
    className="S1"
  >
    <TileG
      tileName="support2"
    />
  </div>
</div>
`;

exports[`6. secondary two no pic and two slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  width: 50%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 10px;
  margin-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  width: 50%;
}

.IS7 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS8 {
  width: 50%;
}

.IS9 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 10px;
  margin-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS10 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="IS10 S1"
>
  <div
    className="IS4 S1"
  >
    <div
      className="IS1 S1"
    >
      <TileAE
        tileName="secondary1"
      />
    </div>
    <div
      className="IS2"
    />
    <div
      className="IS3 S1"
    >
      <TileAE
        tileName="secondary2"
      />
    </div>
  </div>
  <div
    className="IS5 S1"
  />
  <div
    className="IS9 S1"
  >
    <div
      className="IS6 S1"
    >
      <TileG
        tileName="support1"
      />
    </div>
    <div
      className="IS7"
    />
    <div
      className="IS8 S1"
    >
      <TileG
        tileName="support2"
      />
    </div>
  </div>
</div>
`;
